feat: Integrate Supabase for data persistence
Introduces Supabase as the backend for storing user data, including career experiences and job applications. This change replaces local storage solutions with a robust, scalable, and syncable database.

Key changes:
- Adds `@supabase/supabase-js` dependency.
- Refactors `useLocalStorage` hook to `usePersistentData`, enabling synchronization with Supabase.
- Updates global state management in `App.tsx` to use the new persistent data hook.
- Initializes Supabase client and configures data fetching/writing operations.
- Moves Gemini-related service functions into dedicated files (experienceService, jobService, matchingService) for better organization.
- Adds a new "Settings" page and navigation item to facilitate Supabase connection management.
- Exports Gemini client and models from `geminiService` for wider use.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     "react-markdown": "https://aistudiocdn.com/react-markdown@^10.1.0",
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
     "react": "https://aistudiocdn.com/react@^19.2.1",
-    "recharts": "https://aistudiocdn.com/recharts@^3.5.1"
+    "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
   }
 }
 </script>
